Kubernetes/database.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
  namespace: observability
spec:
  serviceName: mssql
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      nodeSelector:
        node-group: management
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        resources:
          requests:
            memory: "2G"
            cpu: "2000m"
          limits:
            memory: "2G"
            cpu: "2000m"
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql      
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
---

apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: observability
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
      nodePort: 30642
  type: NodePort
